5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1876_1290.log
== TEST (2019-07-03 19:20:28) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([10,12,15],[6,8,12],[12,12,18])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:42) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([10,12,15],[6,8,12],[12,12,18])
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:51) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:22:40) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
print(entrada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:23:44) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
cal=inv(matriz)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:24:28) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
cal=dot(inv(matriz),entrada)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:27:27) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
trans=entrada.t
cal=dot(inv(matriz),trans)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:27:38) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
trans=entrada.T
cal=dot(inv(matriz),trans)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:31:07) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),trans)
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:32:32) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),trans)
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:33:12) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:34:16) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print(round(cal, 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:37:01) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[round(entrada[0]*60, 0),round(entrada[1]*60, 0),round(entrada[2]*60,0)]
trans=entrada.T
cal=dot(inv(matriz),aux)
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:37:26) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:38:15) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),trans)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:39:00) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print(cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:21) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira:" ca[0])
-- ERROR:
File "XXXX", line 9
    print("cadeira:" ca[0])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:29) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira:"+ca[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:38) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira:"+cal[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:41:11) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira:" + cal[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:41:54) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print(cadeira: + cal[0])
-- ERROR:
File "XXXX", line 9
    print(cadeira: + cal[0])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:42:21) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira:" + cal[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:42:40) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print( cal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:43:16) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira",  cal[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:43:55) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira",  round(cal[0], 1)
-- ERROR:
File "XXXX", line 10
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:43:59) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira",  round(cal[0], 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:44:55) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira",  round(cal[0], 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:46:06) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
print("cadeira:",  round(cal[0], 0))
print("bau:", round(cal[1], 0))
print("mesa:", round(cal[2], 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:47:57) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)

print("cadeira:",  round(cal[0], 0))
print("bau:", round(cal[1], 0))
print("mesa:", round(cal[2], 0))
print(max(cal))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:53:19) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
ma=max(round(cal, 0))
print("cadeira:",  round(cal[0], 0))
print("bau:", round(cal[1], 0))
print("mesa:", round(cal[2], 0))

for i in cal:
	if (cal[i]==ma):
		print("cadeira")
	elif (cal[i]==ma):
		print("bau")
	elif (cal[i]==ma):
		print("mesa")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:53:42) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
ma=max(cal)
print("cadeira:",  round(cal[0], 0))
print("bau:", round(cal[1], 0))
print("mesa:", round(cal[2], 0))

for i in cal:
	if (cal[i]==ma):
		print("cadeira")
	elif (cal[i]==ma):
		print("bau")
	elif (cal[i]==ma):
		print("mesa")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:54:31) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
ma=max(cal)
total=size(cal)
print("cadeira:",  round(cal[0], 0))
print("bau:", round(cal[1], 0))
print("mesa:", round(cal[2], 0))
print(total)
for i in cal:
	if (cal[i]==ma):
		print("cadeira")
	elif (cal[i]==ma):
		print("bau")
	elif (cal[i]==ma):
		print("mesa")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:54:48) 
-- CODE:
from numpy.linalg import*
from numpy import*
from math import*
matriz=array([[10,12,15],[6,8,12],[12,12,18]])
entrada=array(eval(input()))
aux=[entrada[0]*60,entrada[1]*60,entrada[2]*60]
trans=entrada.T
cal=dot(inv(matriz),aux)
ma=max(cal)
total=size(cal)
print("cadeira:",  round(cal[0], 0))
print("bau:", round(cal[1], 0))
print("mesa:", round(cal[2], 0))
print(total)
for i in total:
	if (cal[i]==ma):
		print("cadeira")
	elif (cal[i]==ma):
		print("bau")
	elif (cal[i]==ma):
		print("mesa")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
